[gd_scene load_steps=32 format=3 uid="uid://cr4iodft2gqew"]

[ext_resource type="Script" path="res://scripts/flower.gd" id="1_crkqh"]
[ext_resource type="Texture2D" uid="uid://t6df4oxeqflk" path="res://Assets/Sprites/cactusFlower.png" id="2_j74i6"]
[ext_resource type="Texture2D" uid="uid://ctsw11iphp5vm" path="res://Assets/Sprites/PansyFlower.png" id="3_06v63"]
[ext_resource type="Texture2D" uid="uid://dn7kkavgf04ee" path="res://Assets/Sprites/chiveFlower.png" id="3_t4xj8"]
[ext_resource type="Texture2D" uid="uid://dwxsxt44ldv5f" path="res://Assets/Sprites/SunflowerFlower.png" id="4_rqc15"]

[sub_resource type="AtlasTexture" id="AtlasTexture_88rag"]
atlas = ExtResource("2_j74i6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tbli"]
atlas = ExtResource("2_j74i6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g50je"]
atlas = ExtResource("2_j74i6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce76h"]
atlas = ExtResource("2_j74i6")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o2ti"]
atlas = ExtResource("3_t4xj8")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n00m5"]
atlas = ExtResource("3_t4xj8")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v352f"]
atlas = ExtResource("3_t4xj8")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gx0o"]
atlas = ExtResource("3_t4xj8")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_le5m3"]
atlas = ExtResource("3_t4xj8")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbdcf"]
atlas = ExtResource("3_t4xj8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_owusw"]
atlas = ExtResource("3_t4xj8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31qam"]
atlas = ExtResource("3_t4xj8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a8ye"]
atlas = ExtResource("3_06v63")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqssn"]
atlas = ExtResource("3_06v63")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1jo1"]
atlas = ExtResource("3_06v63")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo0t4"]
atlas = ExtResource("3_06v63")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4geri"]
atlas = ExtResource("4_rqc15")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfcua"]
atlas = ExtResource("4_rqc15")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8dp8"]
atlas = ExtResource("4_rqc15")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4w0h"]
atlas = ExtResource("4_rqc15")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbjy6"]
atlas = ExtResource("4_rqc15")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0ixx"]
atlas = ExtResource("4_rqc15")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_srmhu"]
atlas = ExtResource("4_rqc15")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3a56"]
atlas = ExtResource("4_rqc15")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf3vn"]
atlas = ExtResource("4_rqc15")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dsx0u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88rag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tbli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g50je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce76h")
}],
"loop": false,
"name": &"cactusFlower",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o2ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n00m5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v352f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gx0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_le5m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbdcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owusw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31qam")
}],
"loop": true,
"name": &"chiveFlower",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a8ye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqssn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1jo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo0t4")
}],
"loop": false,
"name": &"pansyFlower",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4geri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfcua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8dp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4w0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbjy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0ixx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srmhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3a56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf3vn")
}],
"loop": false,
"name": &"sunflowerFlower",
"speed": 0.0
}]

[node name="Flower" type="Node2D"]
script = ExtResource("1_crkqh")

[node name="GrowthTimer" type="Timer" parent="."]
autostart = true

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dsx0u")
animation = &"chiveFlower"

[node name="CurrencyGenTimer" type="Timer" parent="."]

[connection signal="timeout" from="GrowthTimer" to="." method="_on_growth_timer_timeout"]
[connection signal="timeout" from="CurrencyGenTimer" to="." method="_on_currency_gen_timer_timeout"]
